<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="development.alberto.com.flickrtest.presentation.view.initialpictures.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search for picture: "
        android:textSize="@dimen/title_size"/>

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="wrap_content"


        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/picturesListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/llError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

</LinearLayout>
